# rak

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  test-coverage.sh  test.bat  test.sh
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
docs/: README.md  rak.ebnf
examples/: 100doors.rak  ackermann.rak  bubble_sort.rak  factorial.rak  fib.rak  fiber.rak  fizzbuzz.rak  hailstone.rak  hello.rak  pi.rak  quick_sort.rak  rule110.rak  shebang.rak
include/: rak.h
include/rak/: array.h  bitset.h  builtin.h  callable.h  chunk.h  closure.h  compiler.h  dump.h  error.h  fiber.h  function.h  lexer.h  memory.h  native.h  range.h  record.h  slice.h  stack.h  string.h  value.h  vm.h
src/: array.c  bitset.c  builtin.c  callable.c  chunk.c  closure.c  compiler.c  dump.c  error.c  fiber.c  function.c  lexer.c  main.c  memory.c  native.c  range.c  record.c  string.c  value.c  vm.c
tests/: built-in.append.yaml  built-in.array.yaml  built-in.panic.yaml  comparision.yaml  compiler.misc.yaml  declarations.fn.yaml  destructuring.yaml  dump.yaml  examples.yaml  fibers.yaml  functions.inout.yaml  functions.yaml  main.yaml  operators.yaml  run.py  shebang.yaml  statements.if.yaml  statements.while-loop.yaml  strings.yaml  values.yaml  variables.yaml
